Added a link to the groundhog dataseet.

--- a/machine_learning_example.html
+++ b/machine_learning_example.html
@@ -11786,6 +11786,7 @@ div#notebook {
 <p>In case you don't know what GroundHob Day is, it's a tradition celebrated in the United States and Candada.</p>
 <p>It derives from the Pennsylvania Dutch superstition that if a groundhog (Deitsch: Grundsau, Grunddax, Dax) emerging from its burrow on this day sees a shadow due to clear weather, it will retreat to its den and winter will persist for six more weeks, and if he does not, due to cloudiness, spring season will arrive early (<a href="https://en.wikipedia.org/wiki/Groundhog_Day">Wikipedia</a>).</p>
 <p>Groundhob day this year is Friday, February 2 (in 7 days)! Let's see if we can predict the groundhog's fate and the fate  North America!</p>
+<p>To do this we'll use another <a href="https://www.kaggle.com/groundhogclub/groundhog-day/data">dataset from Kaggle</a>.</p>
 
 </div>
 </div>
